# ShadaOs1

./: BuiltInCommand.cpp  BuiltInCommand.h  CMakeLists.txt  ChangeDirCommand.cpp  ChangeDirCommand.h  ChmodCommand.cpp  ChmodCommand.h  Commands.cpp  Commands.h  ExternalCommand.cpp  ExternalCommand.h  ForegroundCommand.cpp  ForegroundCommand.h  GetCurrDirCommand.cpp  GetCurrDirCommand.h  Helper.h  JobsCommand.cpp  JobsCommand.h  JobsList.cpp  JobsList.h  KillCommand.cpp  KillCommand.h  Makefile  PipeCommand.cpp  PipeCommand.h  QuitCommand.cpp  QuitCommand.h  README.md  RedirectionCommand.cpp  RedirectionCommand.h  ShowPidCommand.cpp  ShowPidCommand.h  SmallShell.cpp  SmallShell.h  k  out  out.txt  quickDiff.sh  quickDiffErr.sh  quickInput.sh  (+6 more)
tests/outputs/: test_2020_kill.err.processed  test_bg1.out.processed  test_bg2.err.processed  test_bg2.out.processed  test_bg5.err.processed  test_bg5.out.processed  test_bg_errors.err.processed  test_bg_errors.out.processed
tests/runner/: a.out  test.c
